kubernetes/apps/habit-tracker/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: habit-tracker
  labels:
    app: habit-tracker
spec:
  type: ClusterIP
  selector:
    app: habit-tracker
  ports:
    - name: http
      port: 80
      targetPort: http
