kubernetes/apps/habit-tracker/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habit-tracker
spec:
  ingressClassName: nginx
  rules:
    # TODO: your real (sub)domain
    - host: habits.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habit-tracker
                port:
                  name: http
